# cluMeasurementData

./: Cargo.toml  README.md
examples/: test.rs
src/: display_type.rs  lib.rs
src/screen/: resolution.rs  resolution_element.rs
src/values/: accurate.rs  data_px.rs  data_pxf.rs
src/web_values/: data_vh.rs
